src/resources/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  namespace: istio-system
  name: kubeflow-ingress
  labels:
    name: kubeflow-ingress
spec:
  rules:
    - host: kf.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
