src/resources/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  namespace: kubeflow
  name: minio-ingress
  labels:
    name: minio-ingress
spec:
  rules:
    - host: minio.172.18.0.3.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
